[package]
name = "srake"
version = "0.1.1"
authors = ["akmal"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Simple Implementation of RAKE Algoritm"
homepage = "https://github.com/pandas-id/rust-rake-algoritm.git"
repository = "https://github.com/pandas-id/rust-rake-algoritm.git"
keywords = ["rake", "algoritm"]
readme = "README.md"

[dependencies]
stop-words = "0.8.0"

# [lib]
# path = "src/lib.rs"
